unpackaged/main/default/objects/EBH_Project__c/fields/GMV_Fulfillment_PCT_30d__c.field-meta.xml
<CustomField>
    <fullName>GMV_Fulfillment_PCT_30d__c</fullName>
    <description>US-0007265 Fulfilment metrics</description>
    <inlineHelpText>GMV % Fulfillment vs Total, last 30 days.</inlineHelpText>
    <label>eFF GMV % (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>