unpackaged/main/default/objects/EBH_Project__c/fields/GMVLast12Months__c.field-meta.xml
<CustomField>
    <fullName>GMVLast12Months__c</fullName>
    <description>US-0007610</description>
    <formula>EBH_Seller__r.EBH_GMVLast12Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMV (Last 12 Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>