unpackaged/main/default/objects/EBH_Project__c/fields/Halo_Seller_Badge_Required__c.field-meta.xml
<CustomField>
    <fullName>Halo_Seller_Badge_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0006850</description>
    <label>Halo/Seller Badge Required</label>
    <type>Checkbox</type>
</CustomField>