unpackaged/main/default/objects/EBH_Project__c/fields/Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time__c</fullName>
    <description>US-0010689</description>
    <label>Handle Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>