unpackaged/main/default/objects/EBH_Project__c/fields/Handover_Date_to_FF_Partner__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_to_FF_Partner__c</fullName>
    <label>Handover Date to FF Partner</label>
    <type>Date</type>
</CustomField>