unpackaged/main/default/objects/EBH_Project__c/fields/Integration_Pace__c.field-meta.xml
<CustomField>
    <fullName>Integration_Pace__c</fullName>
    <description>US-0006850</description>
    <label>Integration Pace</label>
    <type>TextArea</type>
</CustomField>