unpackaged/main/default/objects/EBH_Project__c/fields/Integration_partner__c.field-meta.xml
<CustomField>
    <fullName>Integration_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007315 - [AU &amp;EU] Integration Partner &amp; Shopping Card</description>
    <label>Integration Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.EBH_PartnerType__c</field>
            <operation>equals</operation>
            <value>Integration Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Integration partner)</relationshipLabel>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>