unpackaged/main/default/objects/EBH_Project__c/fields/Integration_type__c.field-meta.xml
<CustomField>
    <fullName>Integration_type__c</fullName>
    <label>Integration type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Site__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Plug in</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>MIP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>3PP</fullName>
            </value>
            <value>
                <fullName>API Hybrid</fullName>
            </value>
            <value>
                <fullName>MIP Hybrid</fullName>
            </value>
            <value>
                <fullName>Low-touch</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>CSV (file exchange)</fullName>
            </value>
            <value>
                <fullName>Cart plug in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>