unpackaged/main/default/objects/EBH_Project__c/fields/IntegrationManager__c.field-meta.xml
<CustomField>
    <fullName>IntegrationManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#US-0018736</description>
    <label>Integration Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>