unpackaged/main/default/objects/EBH_Project__c/fields/Intended_Number_of_SKU_S_On_Ebay_Store__c.field-meta.xml
<CustomField>
    <fullName>Intended_Number_of_SKU_S_On_Ebay_Store__c</fullName>
    <description>US-0010689</description>
    <label>Intended Number of SKU&#39;S On Ebay Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>