unpackaged/main/default/objects/EBH_Project__c/fields/Internet_Search__c.field-meta.xml
<CustomField>
    <fullName>Internet_Search__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <label>Internet Search</label>
    <type>TextArea</type>
</CustomField>