unpackaged/main/default/objects/EBH_Project__c/fields/Issue_97_flag__c.field-meta.xml
<CustomField>
    <fullName>Issue_97_flag__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <inlineHelpText>check if issue 97 was placed on the account</inlineHelpText>
    <label>Issue 97 flag</label>
    <type>TextArea</type>
</CustomField>