unpackaged/main/default/objects/EBH_Project__c/fields/Kick_off_call__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_call__c</fullName>
    <description>US-0006850</description>
    <label>Kick off call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Working on it</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>