unpackaged/main/default/objects/EBH_Project__c/fields/Last_dispatch_time__c.field-meta.xml
<CustomField>
    <fullName>Last_dispatch_time__c</fullName>
    <description>US-0010689</description>
    <label>Last dispatch time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>