unpackaged/main/default/objects/EBH_Project__c/fields/LeadSegment__c.field-meta.xml
<CustomField>
    <fullName>LeadSegment__c</fullName>
    <description>#US-0018736</description>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
                <label>SMB (small medium business)</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <label>Enterprise (large retailers)</label>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>