unpackaged/main/default/objects/EBH_Project__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>#US-0018736</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2018 Amazon Leads</fullName>
            </value>
            <value>
                <fullName>2018 TTEC</fullName>
            </value>
            <value>
                <fullName>2019 TTEC Leads</fullName>
            </value>
            <value>
                <fullName>Aegis</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Self Gen</fullName>
            </value>
            <value>
                <fullName>Telstra</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
            <value>
                <fullName>Self Gen (Landing Page)</fullName>
            </value>
            <value>
                <fullName>Internal (Category/Account Manager)</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Reactivation (existing &amp; declining sellers)</fullName>
            </value>
            <value>
                <fullName>External Provider</fullName>
            </value>
            <value>
                <fullName>Self Starters (existing newly on eBay)</fullName>
            </value>
            <value>
                <fullName>3PP &amp; Trade Groups</fullName>
            </value>
            <value>
                <fullName>Market Analytics (e.g. Minderest AZ Direct DCP live)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>