unpackaged/main/default/objects/EBH_Project__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007400</description>
    <inlineHelpText>Legal Entity that responds to this Project, in case if it is existing</inlineHelpText>
    <label>Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_LegalEntity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Legal Entity)</relationshipLabel>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>