unpackaged/main/default/objects/EBH_Project__c/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <description>#US-0018736</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>