unpackaged/main/default/objects/EBH_Project__c/fields/Listings__c.field-meta.xml
<CustomField>
    <fullName>Listings__c</fullName>
    <description>#Listings</description>
    <label>Listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>