unpackaged/main/default/objects/EBH_Project__c/fields/Listings_t__c.field-meta.xml
<CustomField>
    <fullName>Listings_t__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <inlineHelpText>Categories, listing practices, T&amp;Cs</inlineHelpText>
    <label>Listings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>