unpackaged/main/default/objects/EBH_Project__c/fields/Main3PP__c.field-meta.xml
<CustomField>
    <fullName>Main3PP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007448</description>
    <label>Main 3PP</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5)</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.EBH_PartnerType__c</field>
            <operation>equals</operation>
            <value>3PP</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Managed Payment</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.EBH_PartnerType__c</field>
            <operation>equals</operation>
            <value>Integration Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (3PP)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>