unpackaged/main/default/objects/EBH_Project__c/fields/Main_Meta_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Meta_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007644 - [AU &amp; EU] Meta Category</description>
    <label>Main Meta Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category_Tree__c.Level_auto__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Category_Tree__c</referenceTo>
    <relationshipLabel>Projects (Main Meta Category)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>