unpackaged/main/default/objects/EBH_Project__c/fields/MainVertical__c.field-meta.xml
<CustomField>
    <fullName>MainVertical__c</fullName>
    <description>US-0007651</description>
    <formula>TEXT(EBH_Seller__r.EBH_MainVertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary vertical based on seller´s transaction share (majority of transactions in last 12 months)</inlineHelpText>
    <label>Main Vertical</label>
    <type>Text</type>
</CustomField>