unpackaged/main/default/objects/EBH_Project__c/fields/ManagedVertical__c.field-meta.xml
<CustomField>
    <fullName>ManagedVertical__c</fullName>
    <description>US-0007828</description>
    <formula>IF ( EBH_Seller__r.EBH_BOBManaged__c == true, TEXT(EBH_Seller__r.EBH_BOBVertical__c), &#39;&#39;)</formula>
    <inlineHelpText>If this is a managed seller the managed vertical is displayed, otherwise this field will be blank</inlineHelpText>
    <label>Managed Vertical</label>
    <type>Text</type>
</CustomField>