unpackaged/main/default/objects/EBH_Project__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>US-0007671, US-0007647</description>
    <formula>IF(
AND(EBH_Seller__r.EBH_BOBManaged__c == true
, ISPICKVAL(EBH_Seller__r.EBH_RegistrationCountry__c, &#39;Germany&#39;)
), EBH_Seller__r.Owner.LastName +&#39; &#39;+ EBH_Seller__r.Owner.FirstName , &#39;&#39;)</formula>
    <label>Seller Manager</label>
    <type>Text</type>
</CustomField>