unpackaged/main/default/objects/EBH_Project__c/fields/Merchant_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Type__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <label>Merchant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLC: Public Limited Company</fullName>
            </value>
            <value>
                <fullName>LTD: Private Limited Company</fullName>
            </value>
            <value>
                <fullName>LLP: Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>LP: Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Individual/ Un-registered</fullName>
            </value>
            <value>
                <fullName>Sole-Trader/Sole Proprietor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>