unpackaged/main/default/objects/EBH_Project__c/fields/MerchantSupport__c.field-meta.xml
<CustomField>
    <fullName>MerchantSupport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007448</description>
    <label>Merchant Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>