unpackaged/main/default/objects/EBH_Project__c/fields/MoM_Fulfillment_SI_PCT_30d__c.field-meta.xml
<CustomField>
    <fullName>MoM_Fulfillment_SI_PCT_30d__c</fullName>
    <description>US-0007265 Fulfilment metrics</description>
    <inlineHelpText>MoM Sold Items % through Fulfillment, from last rolling 30 days</inlineHelpText>
    <label>eFF MoM Sold Items % (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>