unpackaged/main/default/objects/EBH_Project__c/fields/Most_Recent_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Stage_Change_Date__c</fullName>
    <label>Most recent stage change date/time</label>
    <summarizedField>Project_Stage_History__c.Start_Stage_DateTime__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Stage_History__c.End_Stage_Date_Time__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Stage_History__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>