unpackaged/main/default/objects/EBH_Project__c/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <description>US-0010689</description>
    <label>No. of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>