unpackaged/main/default/objects/EBH_Project__c/fields/Non_Sold_SKUs_in_Stock_Fulfillment_7d__c.field-meta.xml
<CustomField>
    <fullName>Non_Sold_SKUs_in_Stock_Fulfillment_7d__c</fullName>
    <description>US-0007265 Fulfilment metrics</description>
    <inlineHelpText>#SKUs that are in stock for 7 days and that have zero sales divided by total #SKUs that are in stock for 7 days</inlineHelpText>
    <label>eFF Non-Sold SKUs in Stock % (7 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>