unpackaged/main/default/objects/EBH_Project__c/fields/NoOfDaysSellerDisengaged__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysSellerDisengaged__c</fullName>
    <description>#US-0018736</description>
    <formula>ABS(TODAY() - SellerDisengagedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days SellerDisengaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>