unpackaged/main/default/objects/EBH_Project__c/fields/Number_of_Warehouses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Warehouses__c</fullName>
    <description>US-0010689</description>
    <label>Number of Warehouses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>