unpackaged/main/default/objects/EBH_Project__c/fields/OnHoldReason__c.field-meta.xml
<CustomField>
    <fullName>OnHoldReason__c</fullName>
    <description>US-0009278:Used on AU-Onboarding Projects to capture the reason why a Project has been put on hold.
US-0011692</description>
    <inlineHelpText>Use this field to capture he reason when placing a project on hold (&quot;On Hold&quot; Stage).</inlineHelpText>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OnHoldReasons</valueSetName>
    </valueSet>
</CustomField>