unpackaged/main/default/objects/EBH_Project__c/fields/OnHoldReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>OnHoldReasonDetails__c</fullName>
    <description>US-0009278: Used to capture context / details regarding why an AU Onboarding project is on hold. This field is required if the &quot;On Hold Reason&quot; field is set to &quot;Other&quot;.</description>
    <inlineHelpText>Use this field to capture any further context regarding the reason for putting the project on hold. This field is required if the On Hold Reason field is set to &quot;Other&quot;.</inlineHelpText>
    <label>On Hold Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>