unpackaged/main/default/objects/EBH_Project__c/fields/Online_Sales_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Online_Sales_Turnover__c</fullName>
    <description>US-0010689</description>
    <label>Online Sales Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>