unpackaged/main/default/objects/EBH_Project__c/fields/OnlineRank__c.field-meta.xml
<CustomField>
    <fullName>OnlineRank__c</fullName>
    <description>#US-0018736</description>
    <label>Online Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>