unpackaged/main/default/objects/EBH_Project__c/fields/Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues__c</fullName>
    <description>US-0009564 - UK Risk: GCX permission set and New fields on Project</description>
    <inlineHelpText>Check history of past issues and restrictions</inlineHelpText>
    <label>Open Issues</label>
    <type>TextArea</type>
</CustomField>