unpackaged/main/default/objects/EBH_Project__c/fields/OracleID__c.field-meta.xml
<CustomField>
    <fullName>OracleID__c</fullName>
    <description>#US-0018736, US-0007647</description>
    <inlineHelpText>Oracle id of the merchant to be be used when associating seller with a project.</inlineHelpText>
    <label>Oracle ID (preliminary)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>