unpackaged/main/default/objects/EBH_Project__c/fields/OtherLeadSource__c.field-meta.xml
<CustomField>
    <fullName>OtherLeadSource__c</fullName>
    <description>#US-0018736</description>
    <label>Other Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>