unpackaged/main/default/objects/EBH_Project__c/fields/OtherMarketPlaces__c.field-meta.xml
<CustomField>
    <fullName>OtherMarketPlaces__c</fullName>
    <description>#US-0018736</description>
    <label>Other Market Places</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alibaba</fullName>
            </value>
            <value>
                <fullName>Aliexpress</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Catch</fullName>
            </value>
            <value>
                <fullName>cDiscount</fullName>
            </value>
            <value>
                <fullName>Etsy</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fishpond</fullName>
            </value>
            <value>
                <fullName>FNAC/ Darty</fullName>
            </value>
            <value>
                <fullName>Greys Online</fullName>
            </value>
            <value>
                <fullName>Gumtree</fullName>
            </value>
            <value>
                <fullName>Iconic</fullName>
            </value>
            <value>
                <fullName>Mano Mano</fullName>
            </value>
            <value>
                <fullName>Price Minister</fullName>
            </value>
            <value>
                <fullName>Rakuten</fullName>
            </value>
            <value>
                <fullName>Rue du commerce</fullName>
            </value>
            <value>
                <fullName>VeePee</fullName>
            </value>
            <value>
                <fullName>Wish</fullName>
            </value>
            <value>
                <fullName>Other Marketplaces</fullName>
            </value>
            <value>
                <fullName>Own online shop</fullName>
            </value>
            <value>
                <fullName>Kogan</fullName>
            </value>
            <value>
                <fullName>Mydeals</fullName>
            </value>
            <value>
                <fullName>Fnac / Darty</fullName>
                <isActive>false</isActive>
                <label>Fnac / Darty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>