unpackaged/main/default/objects/EBH_Project__c/fields/OtherRefundProcess__c.field-meta.xml
<CustomField>
    <fullName>OtherRefundProcess__c</fullName>
    <description>US-0007708 - [AU] New fields for &#39;Managed Payment&#39; Pagelayout for Project</description>
    <label>Other Refund Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>