unpackaged/main/default/objects/EBH_Project__c/fields/Out_of_eFF_date__c.field-meta.xml
<CustomField>
    <fullName>Out_of_eFF_date__c</fullName>
    <description>US-0007683 - Fulfilment - CE Law &amp; Out of eFF fields</description>
    <label>Out of eFF  (date)</label>
    <type>Date</type>
</CustomField>